# linktor

./: .dockerignore  .editorconfig  .env.example  .gitignore  .golangci.yml  Dockerfile  Makefile  README.md  buf.gen.yaml  buf.yaml  config.yaml  docker-compose.yml  execucao.md  go.mod  go.sum
.claude/: settings.local.json
.github/workflows/: build-and-push.yml  deploy.yml
cmd/cli/: README.md  go.mod  go.sum  main.go
cmd/server/: main.go
deploy/: .env.example  README.md  docker-compose.prod.yml
deploy/docker/: init.sql
deploy/docs/: dns.md  runbook.md  secrets.md  vps-setup.md
deploy/mocks/: README.md  docker-compose.mocks.yml
deploy/scripts/: backup.sh  deploy.sh  install-vps.sh  restore.sh
deploy/traefik/: .gitignore  traefik.yml
docs/: docs.go  phase5-chatbot-ai-plan.md
documentos/: AUDITORIA-CODEBASE-VS-PLANEJAMENTO.md  AUDITORIA-FRONTEND-VS-API-AMBIENTE.md  LINKTOR-CHANNEL-ADAPTERS-GUIDE.md  LINKTOR-PROJECT-SPEC.md  LINKTOR-WHATSAPP-COEXISTENCE-GUIDE.md  LINKTOR-WHATSAPP-IMPLEMENTATION-BLUEPRINT.md  WHY-OPEN-SOURCE-MISSED-WHATSAPP-FEATURES.md  linktor-visual-response-engine.md  vre-showcase.html
documentos/mcp/: GUIDE.md  McpPlayground.jsx
internal/api/: router.go
mcp/linktor-mcp-server/: README.md  package-lock.json  package.json
pkg/errors/: errors.go
pkg/graphapi/: baseurl.go  baseurl_test.go
pkg/logger/: logger.go
pkg/plugin/: adapter.go  grpc.go  loader.go  registry.go  types.go
pkg/testutil/: mock_producer.go  mock_repos.go  mock_user_repo.go
pkg/utils/: vcard.go  vcard_test.go
proto/channel/: channel.proto
proto/common/: common.proto
proto/contact/: contact.proto
proto/conversation/: conversation.proto
proto/message/: message.proto
proto/tenant/: tenant.proto
scripts/: clean-and-run.sh  run-backend.sh  run-frontend.sh  test-connect.sh
sdks/dotnet/: README.md
sdks/go/: README.md  go.mod  linktor.go  linktor_test.go  webhook.go
sdks/java/: README.md  pom.xml
sdks/php/: README.md  composer.json
sdks/python/: README.md  pyproject.toml
sdks/python/linktor/: __init__.py  client.py
sdks/python/linktor/types/: __init__.py  ai.py  auth.py  bot.py  channel.py  common.py  contact.py  conversation.py  flow.py  knowledge.py  vre.py  webhook.py
sdks/python/linktor/utils/: __init__.py  errors.py  http.py  webhook.py
sdks/python/tests/: test_client.py
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: client.rs  error.rs  lib.rs  webhook.rs
sdks/rust/src/types/: ai.rs  auth.rs  bot.rs  channel.rs  common.rs  contact.rs  conversation.rs  flow.rs  knowledge.rs  mod.rs  vre.rs  webhook.rs
sdks/typescript/: README.md  package.json  tsconfig.json
templates/default/: card_produto.html  cobranca_pix.html  confirmacao.html  lista_produtos.html  menu_opcoes.html  status_pedido.html
web/admin/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts  playwright.real.config.ts  (+2 more)
(+886 files in other folders)
