[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linktor"
version = "1.0.0"
description = "Official Linktor SDK for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Linktor Team", email = "support@linktor.io" }
]
keywords = [
    "linktor",
    "chatbot",
    "messaging",
    "omnichannel",
    "whatsapp",
    "telegram",
    "facebook",
    "instagram",
    "sdk",
    "api"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "websockets>=12.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "black>=23.0",
]

[project.urls]
Homepage = "https://linktor.io"
Documentation = "https://docs.linktor.io/sdks/python"
Repository = "https://github.com/linktor/linktor-sdk-python"
Issues = "https://github.com/linktor/linktor-sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["linktor"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "Q"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
