[package]
name = "linktor"
version = "1.0.0"
edition = "2021"
authors = ["Linktor Team <dev@linktor.io>"]
description = "Official Linktor SDK for Rust"
license = "MIT"
repository = "https://github.com/linktor/linktor-rust"
documentation = "https://docs.rs/linktor"
keywords = ["linktor", "api", "sdk", "messaging", "chatbot"]
categories = ["api-bindings", "web-programming"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"
url = "2"

[dev-dependencies]
tokio-test = "0.4"
